added college name

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <div class="header-text">
               <span class="main-title">Hey, I'm Nishant Kale.</span>
               <div class="body-text">I’m a developer who aims to help other creatives build out their portfolios, skillset, and businesses.</div>
+              <div class="body-title">IIIT Allahbad</div>
             </div>
             <a class="button" href="https://github.com/nishantkale22">
               <span class="button-text">Check out my Github</span> 
